Completada API, falta filtro para filtrar horarios